# express_examples/webapp/authRouter.js
@@ -1,0 +1,70 @@
+import express from "express";
+import jwt from "jsonwebtoken";
+import bcrypt from "bcryptjs";
+import dotenv from "dotenv";
+import { User } from "./db.js"; 
+
+dotenv.config();
+
+const AuthRouter = express.Router();
+const SECRET_KEY = process.env.JWT_SECRET || "your_secret_key";
+
+AuthRouter.post("/api/v1/ems/signup", async (req, res) => {
+    // #swagger.tags = ['Registration']
+  const { firstName, lastName, email, password, location, role = "user" } = req.body;
+
+  try {
+    const existingUser = await User.findOne({ email });
+    if (existingUser) {
+      return res.status(400).json({ message: "User already exists" });
+    }
+
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    const newUser = new User({
+      firstName,
+      lastName,
+      email,
+      password: hashedPassword,
+      location,
+      role,
+    });
+
+    const savedUser = await newUser.save();
+    const userWithoutPassword = savedUser.toObject();
+    delete userWithoutPassword.password;
+
+    res.status(201).json({
+      message: "User registered successfully",
+      user: userWithoutPassword,
+    });
+  } catch (err) {
+    res.status(500).json({ message: "Server error" });
+  }
+});
+
+
+AuthRouter.post("/api/v1/ems/login", async (req, res) => {
+    // #swagger.tags = ['Login']
+  const { email, password } = req.body;
+
+  try {
+    const user = await User.findOne({ email });
+    if (!user) return res.status(401).json({ message: "Invalid credentials" });
+
+    const isMatch = await bcrypt.compare(password, user.password);
+    if (!isMatch) return res.status(401).json({ message: "Invalid credentials" });
+
+    const token = jwt.sign(
+      { id: user._id, email: user.email, role: user.role },
+      SECRET_KEY,
+      { expiresIn: "1h" }
+    );
+
+    res.json({ message: "Login successful", token });
+  } catch (err) {
+    res.status(500).json({ message: "Server error" });
+  }
+});
+
+export default AuthRouter;
